--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -27,8 +27,8 @@
             <li>Processor – 480 or additional</li>
             <li>RAM – Min 4 GB RAM</li>
             <li>Free Storage for Game – 5 GB space</li>
-            <p></p>
           </ul>
+          <p></p>
         </div>
         <!-- 1 -->
         <div class="info">
@@ -49,7 +49,7 @@
             <li>Storage: 6GB RAM + 128GB Storage, 8GB RAM + 256GB</li>
             <li>Non-removable Li-Po 4000 mAh battery</li>
             <li>Fast charging 18W</li>
-
+            </ul>
             <div class="aff-link1">
               <form action="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -58,13 +58,13 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-          </ul>
+
         </div>
         <!-- 2 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">2. Realme 6</h2>
           <div>
-            <img class="image"src="{% static 'image/mobile/pubg/Realme-6.webp'%}" alt="">
+            <img class="image" src="{% static 'image/mobile/pubg/Realme-6.webp'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by www.bgr.in</p>
           <h4 class="content">About Realme 6</h4>
@@ -80,7 +80,7 @@
             <li>RAM + storage: 64GB 4GB RAM, 128GB 4GB RAM, 128GB 6GB RAM, 128GB 8GB RAM</li>
             <li>Battery:  Non-removable Li-Po 4300 mAh battery</li>
             <li>Fast charging 30W, 100% in 55 min.</li>
-
+            </ul>
             <div class="aff-link1">
               <form action="https://www.amazon.in/Realme-Comet-White-128-RAM/dp/B07Z6GQRS7/ref=sr_1_4?crid=2IB5A2G5AQ5AV&dchild=1&keywords=realme+6&qid=1594823843&sprefix=Rea%2Caps%2C382&sr=8-4">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -90,13 +90,13 @@
               </form>
             </div>
 
-          </ul>
+
         </div>
         <!-- 3 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">3. Redmi Note 9 Pro</h2>
           <div>
-            <img class="image"src="{% static 'image/mobile/pubg/redmi-note-9-pro.jpeg'%}" alt="">
+            <img class="image" src="{% static 'image/mobile/pubg/redmi-note-9-pro.jpeg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by <a href="https://www.digit.in/">www.digit.in</a></p>
           <h4 class="content">About Note 9 Pro</h4>
@@ -112,7 +112,7 @@
             <li>RAM + storage: 64GB 4GB RAM, 128GB 6GB RAM</li>
             <li>Battery:  Non-removable Li-Po 5020mAh battery</li>
             <li>Fast charging 18W</li>
-
+            </ul>
             <div class="aff-link1">
               <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=redmi+note+9+pro&qid=1594824014&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -123,13 +123,13 @@
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 4 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">4. Redmi Note 7 Pro</h2>
           <div>
-            <img class="image"src="{% static 'image/mobile/pubg/redmi-note-7-pro.jpg'%}" alt="">
+            <img class="image" src="{% static 'image/mobile/pubg/redmi-note-7-pro.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: Geekyranjit</p>
           <h4 class="content">About Note 7 Pro</h4>
@@ -145,7 +145,7 @@
             <li>64GB 4GB RAM, 64GB 6GB RAM, 128GB 6GB RAM</li>
             <li>Battery:  Non-removable Li-Po 4000mAh battery</li>
             <li>Fast charging 18W</li>
-
+          </ul>
             <div class="aff-link1">
               <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=redmi+note+7+pro&qid=1594823945&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -156,13 +156,13 @@
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 5 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">5. Vivo S1</h2>
           <div>
-            <img class="image"src="{% static 'image/mobile/pubg/vivo-s1.jpg' %}" alt="">
+            <img class="image" src="{% static 'image/mobile/pubg/vivo-s1.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: Mr. Phone</p>
           <h4 class="content">About Vivo S1</h4>
@@ -178,7 +178,7 @@
             <li>RAM+Storage:64GB 6GB RAM, 128GB 4GB RAM, 128GB 6GB RAM, 256GB 6GB RAM</li>
             <li>Battery: Non-removable Li-Po 4500 mAh battery</li>
             <li>Fast charging 18W</li>
-
+          </ul>
             <div class="aff-link1">
               <form action="https://www.amazon.in/Vivo-Diamond-Storage-Additional-Exchange/dp/B07X9YLSGS/ref=sr_1_2?crid=33MGXHEW3M52S&dchild=1&keywords=vivo+s1+mobile&qid=1594824067&sprefix=vivo+s1%2Caps%2C482&sr=8-2">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -189,7 +189,7 @@
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 6 -->
         <div class="info">
@@ -211,6 +211,7 @@
             <li>Storage: 64 GB or 128 GB UFS 2.1 internal storage + dedicated microSD slot</li>
             <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
             <li>Fast charging 18W</li>
+          </ul>
             <div class="aff-link1">
               <form action="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X4PKGSN/ref=sr_1_1?crid=1APT739K268VB&dchild=1&keywords=note+8+pro+redmi&qid=1594824123&sprefix=note+%2Caps%2C451&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
@@ -220,7 +221,6 @@
               </form>
             </div>
 
-          </ul>
         </div>
         <!-- 7 -->
         <div class="info">
@@ -242,7 +242,7 @@
             <li>Storage: 64 GB or 128 GB </li>
             <li>Battery: Non-removable Li-Po 4035 mAh battery</li>
             <li>Fast charging 20W, 50% in 30 min</li>
-
+          </ul>
             <div class="aff-link1">
               <form action="https://www.flipkart.com/realme-5-pro-sparkling-blue-128-gb/p/itmfj9twdugyvg77?pid=MOBFJ9TWAEBGAYFR&lid=LSTMOBFJ9TWAEBGAYFRGDVJVR&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d44a9a8c-a2f2-415f-9ee6-3c6d29e58c57.MOBFJ9TWAEBGAYFR.SEARCH&ppt=sp&ppn=sp&ssid=wb9h0xta680000001594824150931&qH=0e144ab94d3ed3b">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
@@ -253,7 +253,7 @@
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 8 -->
         <div class="info">
@@ -275,22 +275,18 @@
             <li>Storage: 64 GB or 128 GB </li>
             <li>Battery: Non-removable Li-Po 6000 mAh battery</li>
             <li>Fast charging 15W</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            </div>
-
+          </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <form action="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <form action="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 9 -->
         <div class="info">
@@ -312,22 +308,17 @@
             <li>Storage: 64 GB or 128 GB </li>
             <li>Non-removable Li-Po 5000 mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/vivo-z1pro-sonic-black-128-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT529KQHT8Z&lid=LSTMOBFHHT529KQHT8Z7WZJL1&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&fm=SEARCH&iid=fb2e6925-1432-4665-b9e8-07538e6472e7.MOBFHHT529KQHT8Z.SEARCH&ppt=sp&ppn=sp&ssid=o9q9j5ucow0000001594824303759&qH=bf26cb0d32c2e6ac" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/search?q=vivo+z1+pro&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&as-pos=1&as-type=RECENT&suggestionId=vivo+z1+pro%7CMobiles&requestId=151a69e9-a41c-46f7-82fb-590d752974a9&as-searchtext=vivo%20z1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            </div>
-
+          </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <form action="https://www.flipkart.com/vivo-z1pro-sonic-black-128-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT529KQHT8Z&lid=LSTMOBFHHT529KQHT8Z7WZJL1&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&fm=SEARCH&iid=fb2e6925-1432-4665-b9e8-07538e6472e7.MOBFHHT529KQHT8Z.SEARCH&ppt=sp&ppn=sp&ssid=o9q9j5ucow0000001594824303759&qH=bf26cb0d32c2e6ac">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <form action="https://www.flipkart.com/search?q=vivo+z1+pro&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&as-pos=1&as-type=RECENT&suggestionId=vivo+z1+pro%7CMobiles&requestId=151a69e9-a41c-46f7-82fb-590d752974a9&as-searchtext=vivo%20z1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
 
 
-          </ul>
         </div>
         <!-- 10 -->
         <div class="info">
@@ -348,22 +339,18 @@
             <li>RAM: 3 GB or 4 GB options</li>
             <li>Storage: 32GB ,64 GB or 128 GB </li>
             <li>Battery: Non-removable Li-Po 5000mAh mAh battery, 10W charging</li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            </div>
-
+          </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
-                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              <form action="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <form action="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
 
 
-          </ul>
+
         </div>
         <!-- 11 -->
       </div>
