--- a/limbo/affiliate/templates/mobile/realme/realme v15/realme-v15-news.html
+++ b/limbo/affiliate/templates/mobile/realme/realme v15/realme-v15-news.html
@@ -1,11 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Realme v15 (realme koi) launch date revealed. Rumours about it's specification and design"> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Realme v15, realme v15 spec, realme v15 lauch date"> {% endblock key%}
-    {% block style %}
-    <style>
-      p{font-family: sans-serif;font-size: 17px;}footer p{font-size: 15px;}@media (max-width: 768px){p{font-size: 18px;}.content{font-size: 18px;}footer p{font-size: 14px;}}
-    </style>
-    {% endblock style %}
     {% load static %}
     {% block title%}Realme v15 (realme koi) launch date revealed. Rumours about it's specification and design.{% endblock title%}
     {% block actart%} class="active"{% endblock actart%}
@@ -18,7 +13,7 @@
           <p>Realme V15 price and specifications will be officially revealed on this week</p>
           <p>By <span style="color:blue;"><a href="https://rb.gy/5rrdsp">Rohit Kumar</a></span>- Updated on <b style="color: gray;">5th Jan, 2021</b></p>
           <hr class="my-2">
-          <img class="image" src="{% static 'image/article/apps/air scanner/realme-v15-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/realme/realme-v15-2.jpg'%}" alt="">
           <p></p>
           <hr class="my-2">
           <p>Those who are waiting for Realme v15, its good news for them. Realme v15 launch date officially revealed in china. As per rumours and image floating arround on internet, the Realme V15 launch is set for 7th January 2021. Realme koi has been rumoured about few times in the past and coupled of image were leaked as well. Now image of this phone has been officially revealed by realme. The official teaser images gives a lot of information about this smartphone like its design and color. </p>
